[project]
name = "protwis-django-docker"
version = "0.1.0"
description = "Python runtime environment for the protwis Django application (GPCRdb)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8,<3.9"
authors = [
    { name = "protwis" },
]

# Sourced from iskoldt/protwis_docker requirements.txt (2025 baseline).
# Pins preserved verbatim — any upgrade should go through a CI matrix.
dependencies = [
    "Django==2.2.17",
    "django-debug-toolbar==1.11",
    "django-polymorphic==2.0.3",
    "django-rest-swagger==2.2.0",
    "djangorestframework==3.9.3",
    "django-rdkit",
    "biopython==1.81",
    "cachetools==3.1.1",
    "Cython==0.29.28",
    "datamol==0.6.8",
    "freesasa==2.1.0",
    "lxml==4.4.2",
    "mmtf-python==1.1.3",
    "openpyxl==3.1.5",
    "psycopg2==2.8.6",
    "PyYAML==5.1",
    "reportlab==3.6.12",
    "scikit-learn",
    "svglib==0.9.3",
    "xlrd==1.2.0",
    "XlsxWriter==1.1.8",
    "xmltodict==0.12.0",
    "Sphinx==2.0.1",
    "ipython==7.5.0",
    "docker",
    "google-api-python-client==1.7.11",
    "oauth2client==4.1.3",
    # datamol 0.6.8 imports canonicalize_tautomer_smiles, removed in rdkit 2023.09+.
    # iskoldt's conda-forge rdkit ships this symbol; the pip wheel does not.
    # Pin below that boundary until datamol is upgraded alongside rdkit.
    "rdkit<2023.9",
]

[project.optional-dependencies]
dev = [
    "ipdb",
]

[tool.uv]
# Allow yanked releases — several pinned versions above are old.
# required-environments hints uv to resolve for the target Docker platform.
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
]

[tool.uv.sources]
# django-rdkit has no PyPI release that matches modern rdkit wheels; pull from git.
django-rdkit = { git = "https://github.com/rdkit/django-rdkit.git" }
